--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-web",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Poker Game Manager - Track friendly poker games",
   "type": "module",
   "scripts": {
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.1.1"
