--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "html2canvas": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.4",
