--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "buildCommand": "node node_modules/vite/bin/vite.js build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
-}
+    }
   ]
 }
